Close button alignment fixes;

--- a/docs/static/ds6/skin.css
+++ b/docs/static/ds6/skin.css
@@ -2496,7 +2496,7 @@ span.inline-notice {
 button.flyout-notice__close {
   color: #111820;
   height: 32px;
-  margin: -6px 0 0 16px;
+  margin: -8px -6px 0 16px;
   width: 32px;
   -ms-flex-item-align: start;
       align-self: flex-start;
@@ -3601,7 +3601,7 @@ button.infotip__close,
 button.tourtip__close {
   color: #111820;
   height: 32px;
-  margin: -6px 0 0 16px;
+  margin: -8px -6px 0 16px;
   width: 32px;
   -ms-flex-item-align: start;
       align-self: flex-start;
