--- a/src/less/mixins/bubble/ds6/bubble.less
+++ b/src/less/mixins/bubble/ds6/bubble.less
@@ -10,7 +10,7 @@
 .bubble-close() {
     color: @ds6-color-black;
     height: 32px;
-    margin: -6px 0 0 16px;
+    margin: -8px -6px 0 16px;
     width: 32px;
 
     span {
